# reST-docstring-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
rest_docstring_checker/: __main__.py  constants.py  docstring_checker.py  docstring_errors.py  module_parser.py
tests/: docstring_checker_test.py
