[tool.poetry]
name = "rest-docstring-checker"
version = "0.0.1"
description = "This repository contains a Python utility tool for checking adherence to PEP 287 - reStructuredText (reST) Docstring Format. It validates function docstrings in Python files against the reST format."
authors = [ "Casper Lindberg <casper.lindberg@outlook.com>" ]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
docstring-parser = "~0.15.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "~23.7.0"
mypy = "~1.5.1"
pre-commit = "~3.5.0"
pytest = "~7.4.2"
pytest-cov = "~4.1.0"
ruff = "~0.0.286"
vulture = "~2.9.1"

[tool.poetry.scripts]
rest-docstring-checker = "rest_docstring_checker.__main__:main"

[tool.mypy]
python_version = "3.12"
cache_dir = ".cache/mypy/"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
select = [
    "A",      # flake8-builtins
    "ANN001", # flake8-annotations:missing-type-function-argument
    "ANN201", # flake8-annotations:missing-return-type-undocumented-public-function
    "ANN204", # flake8-annotations:missing-return-type-special-method
    "ANN205", # flake8-annotations:missing-return-type-static-method
    "ANN206", # flake8-annotations:missing-return-type-class-method
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "C",      # flake8-comprehensions
    "COM",    # flake8-commas
    "C90",    # mccabe
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "G",      # flake8-logging-format
    "I",      # isort
    "N",      # pep8-naming
    "PL",     # pylint
    "PD",     # pandas-vet
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]

[tool.ruff.per-file-ignores]
# Do not complain if __init__.py files have unused imports.
"__init__.py" = [ "F401" ]
"tests/**/*.py" = [
    "ANN001",
    "ANN201",
    "S101",
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--cov-report=html:test-reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov=rest_docstring_checker",
    "--no-cov-on-fail",
    "--strict-markers",
    "--verbose",
]

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
